# yolov8-ros2-wrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/yolov8_wrapper/: detect.hpp
launch/: detect.launch.py
src/: detect.cpp  detect_node.cpp
